# intune-container

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build.rs  cliff.toml  install.sh  justfile  mkdocs.yml  skills-lock.json  tauri.conf.json
.github/workflows/: ci.yml  docs.yml  release.yml
capabilities/: default.json
docs/: architecture.md  capabilities.md  index.md  quickstart.md  roadmap.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Overlay.tsx  api.ts  main.tsx  theme.tsx
frontend/src/components/: BackupView.tsx  ContainmentCore.tsx  ControlButton.tsx  DestroyView.tsx  DoctorPanel.tsx  HealthPanel.tsx  LogsView.tsx  PasswordModal.tsx  ShellView.tsx  Toast.tsx  UserCard.tsx
src/: backend.rs  backup.rs  compositor.rs  config.rs  container.rs  display.rs  doctor.rs  gui.rs  gui_bootstrap.rs  init.rs  lib.rs  lock.rs  main.rs  native_host.rs  oci.rs  ops.rs  provision.rs  runtime.rs
