[package]
name = "intune-container"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing Microsoft Intune in a systemd-nspawn container"
license = "MIT"
readme = "README.md"
keywords = ["intune", "systemd-nspawn", "sso", "entra", "linux"]
categories = ["command-line-utilities"]
authors = ["Abdessalam ZAIMI <abdessalam@zaimi.dev>"]
repository = "https://github.com/magicabdel/intune-container"

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive"] }

# Unix APIs
nix = { version = "0.29", features = ["process", "signal", "user", "fs"] }

# Error handling
anyhow = "1"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Password prompt
rpassword = "7"

# D-Bus (native messaging host → container broker)
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "time"] }
